// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenreSelector filters returns filters genres of an AND selector 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root makeStyles-container-1 MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
    >
      <div
        aria-label="OWNED/READ genres"
        class="MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="OWNED"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall MuiToggleButton-sizeSmall"
          tabindex="0"
          type="button"
          value="owned"
        >
          <span
            class="MuiToggleButton-label"
          >
            OWNED
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="READ"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall MuiToggleButton-sizeSmall"
          data-testid=""
          tabindex="0"
          type="button"
          value="read"
        >
          <span
            class="MuiToggleButton-label"
          >
            READ
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
    >
      <div
        class=" css-2b097c-container"
      >
        <div
          class=" css-yk16xz-control"
        >
          <div
            class=" css-1hwfws3"
          >
            <div
              class=" css-1wa3eu0-placeholder"
            >
              Select...
            </div>
            <div
              class="css-w8afj7-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-2-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1g48xl4-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
    >
      <div
        aria-label="AND/OR genres"
        class="MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="OR"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall MuiToggleButton-sizeSmall"
          tabindex="0"
          type="button"
          value="OR"
        >
          <span
            class="MuiToggleButton-label"
          >
            OR
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="AND"
          aria-pressed="true"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall Mui-selected MuiToggleButton-sizeSmall"
          data-testid="andButton"
          tabindex="0"
          type="button"
          value="AND"
        >
          <span
            class="MuiToggleButton-label"
          >
            AND
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenreSelector render should render as expected with genres 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root makeStyles-container-4 MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
    >
      <div
        aria-label="OWNED/READ genres"
        class="MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="OWNED"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall MuiToggleButton-sizeSmall"
          tabindex="0"
          type="button"
          value="owned"
        >
          <span
            class="MuiToggleButton-label"
          >
            OWNED
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="READ"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall MuiToggleButton-sizeSmall"
          tabindex="0"
          type="button"
          value="read"
        >
          <span
            class="MuiToggleButton-label"
          >
            READ
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
    >
      <div
        class=" css-2b097c-container"
      >
        <div
          class=" css-yk16xz-control"
        >
          <div
            class=" css-1hwfws3"
          >
            <div
              class=" css-1wa3eu0-placeholder"
            >
              Select...
            </div>
            <div
              class="css-w8afj7-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-2-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1g48xl4-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-tj5bde-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
    >
      <div
        aria-label="AND/OR genres"
        class="MuiToggleButtonGroup-root"
        role="group"
      >
        <button
          aria-label="OR"
          aria-pressed="true"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall Mui-selected MuiToggleButton-sizeSmall"
          tabindex="0"
          type="button"
          value="OR"
        >
          <span
            class="MuiToggleButton-label"
          >
            OR
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          aria-label="AND"
          aria-pressed="false"
          class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedSizeSmall MuiToggleButton-sizeSmall"
          tabindex="0"
          type="button"
          value="AND"
        >
          <span
            class="MuiToggleButton-label"
          >
            AND
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenreSelector render should render as expected with no genres 1`] = `<DocumentFragment />`;
